@@ -1,1 +1,11 @@
 # DistributedSystems_projectBulletinBoard
+
+There are two ways to run the project. The simplest way is to start the server by executing the run_server.bat. After that you can start as many clients as you want by executing the run_client.bat. 
+
+
+In case this doesn't work you can start the Server.jar and Client.jar manually. You need to go to the directory of the project in your cmd and run following commands.
+To start the server: 
+java -jar --enable-preview Server.jar
+To start the client:
+java -jar --enable-preview Client.jar
+This are the same commands that are executed in the .bat-scripts.
